--- a/WinTail.csproj
+++ b/WinTail.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Messages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TailActor.cs" />
     <Compile Include="TailCoordinatorActor.cs" />
     <Compile Include="ValidationActor.cs" />
   </ItemGroup>
